fix: Confirmation text checkmark truncated if text is long

--- a/src/form/render/submitted/confirmationText.scss
+++ b/src/form/render/submitted/confirmationText.scss
@@ -3,7 +3,11 @@
   gap: 10px;
   align-items: center;
   margin: 0 0 20px !important;
+  svg {
+    flex: 0 0 auto;
+  }
   span {
+    flex: 1 1 auto;
     font-size: 18px;
     font-weight: 600 !important;
     color: #219653;
